fix the "back to top" visibility

--- a/stylesheets/extra_new.css
+++ b/stylesheets/extra_new.css
@@ -69,6 +69,7 @@
 .md-top.md-icon {
   background-color: rgba(0,0,0,0.8);
   color: #FFFFFF;
+  z-index: 70;
 }
 
 nav.md-header__inner.md-grid {
